# Lian-MCP-LLM-Agent

./: .gitignore  LICENSE  README.html  README.md  main.py  pyproject.toml  requirements.txt  test_refactoring.py  test_schema.py
mylib/: __init__.py
mylib/agent/: Enum.py  __init__.py  agent.md  base.py  demo_agent.py  executor_agent.py  planner_agent.py  rag_agent.py  summary_agent.py
mylib/agent/config/: config.example.toml
mylib/config/: __init__.py  base.py  discovery_loader.py  loader.py  summary.py
mylib/config/docs/: UserGuide.md
mylib/core/: agent_web.py  modes.py  pipeline.py
mylib/kernel/: __init__.py
mylib/kit/: __init__.py
mylib/lian_agent/: base.py  caster.py  dbsave.py  executor.py  lian_agent.md  planner.py  rag.py  summary.py
mylib/lian_orm/: __init__.py  orm.py
mylib/llm/: __init__.py  llm_client.py  llm_client_web.py  llm_config.example.toml
mylib/mcp/: .env  .example.env  README.md  __init__.py  base.py  config.py  llm_client.py  mcp.py  mcp_server.py
mylib/sql/: BaseRepo.py  DBPool.py  MemoryLogRepo.py  TaskStepsRepo.py  TasksRepo.py  ToolCallsRepo.py  __init__.py  example_usage.py  sql.py  sql_test.py
mylib/utils/: __init__.py
tests/: Loutput.test.py  base.py  color_comparison.py  config.test.py  emb_test.py  lian_orm.test.py  lian_orm_schema_parser.test.py  psql_connect.test.py  rgb_demo.py  sql.test.py  sql_connect.test.py  test_relations.py  test_sql_complete.py
tests/config/: config.json
tests/sql/: example.py  sql.py
tests/utils_Loutput/: Loutput.test.py  base.py  color_comparison.py  rgb_demo.py  rgb_quick.py
(+183 files in other folders)
